fix gameday layout issue

--- a/static/css/less_css/less/tba/tba_gameday.less
+++ b/static/css/less_css/less/tba/tba_gameday.less
@@ -63,7 +63,6 @@ body {
 
   .dropdown-toggle, .chat-toggle, .social-toggle, .ticker-toggle, .settings-button {
     padding: 6px 8px !important;
-    height: 18px !important;
   }
 
   .dropdown:hover, .chat:hover, .social:hover, .ticker:hover, .settings:hover {
